@@ -24,62 +24,63 @@ MERCURY_MATH_LIB="@MATH_LIB@"
 # be used by the substitution for SHARED_LIBS.
 MATH_LIB=$(MERCURY_MATH_LIB)
 
+DEFAULT_MERCURY_LINKAGE=@DEFAULT_LINKAGE@
+
 # The default optimization level should be after
 # all the options that describe the machine configuration.
 DEFAULT_MCFLAGS=\
-		$(MERCURY_ALL_MC_C_INCL_DIRS) \
 		@ALL_LOCAL_C_INCL_DIR_MMC_OPTS@ \
 		@ALL_LOCAL_C_LIB_DIR_MMC_OPTS@ \
 		--cc "$(MERCURY_C_COMPILER)" \
 		--grade "$(MERCURY_DEFAULT_GRADE)" \
-		--cflags-for-ansi \"@CFLAGS_FOR_ANSI@\" \
-		--cflags-for-optimization \"@CFLAGS_FOR_OPT@\" \
-		--cflags-for-warnings \"@CFLAGS_FOR_WARNINGS@\" \
-		--cflags-for-threads \"@CFLAGS_FOR_THREADS@\" \
-		--cflags-for-debug \"@CFLAGS_FOR_DEBUG@\" \
-		--cflags-for-regs \"@CFLAGS_FOR_REGS@\" \
-		--cflags-for-gotos \"@CFLAGS_FOR_GOTOS@\" \
-		--cflags-for-pic \"@CFLAGS_FOR_PIC@\" \
-		--c-flag-to-name-object-file \"@OBJFILE_OPT@\" \
-		--object-file-extension \".@OBJ_SUFFIX@\" \
-		--pic-object-file-extension \".@EXT_FOR_PIC_OBJECTS@\" \
-		--link-with-pic-object-file-extension \".@EXT_FOR_LINK_WITH_PIC_OBJECTS@\" \
-		--executable-file-extension \"@EXT_FOR_EXE@\" \
-		--shared-library-extension \".@EXT_FOR_SHARED_LIB@\" \
-		--library-extension \".@LIB_SUFFIX@\" \
-		--create-archive-command \"@AR@\" \
-		--create-archive-command-output-flag \"@AR_LIBFILE_OPT@\" \
-		--create-archive-command-flags \"@ARFLAGS@\" \
-		--ranlib-command \"@RANLIB@\" \
-		--link-executable-command \"@LINK_EXE@\" \
-		--link-shared-lib-command \"@LINK_SHARED_OBJ@\" \
-		--trace-libs \"@TRACE_LIBS_SYSTEM@\" \
-		--thread-libs \"@THREAD_LIBS@\" \
-		--shared-libs \"@SHARED_LIBS@\" \
-		--math-lib \"@MATH_LIB@\" \
-		--readline-libs \"@READLINE_LIBRARIES@\" \
-		--linker-thread-flags \"@LDFLAGS_FOR_THREADS@\" \
-		--shlib-linker-thread-flags \"@LD_LIBFLAGS_FOR_THREADS@\" \
+		--cflags-for-ansi "@CFLAGS_FOR_ANSI@" \
+		--cflags-for-optimization "@CFLAGS_FOR_OPT@" \
+		--cflags-for-warnings "@CFLAGS_FOR_WARNINGS@" \
+		--cflags-for-threads "@CFLAGS_FOR_THREADS@" \
+		--cflags-for-debug "@CFLAGS_FOR_DEBUG@" \
+		--cflags-for-regs "@CFLAGS_FOR_REGS@" \
+		--cflags-for-gotos "@CFLAGS_FOR_GOTOS@" \
+		--cflags-for-pic "@CFLAGS_FOR_PIC@" \
+		--c-flag-to-name-object-file "@OBJFILE_OPT@" \
+		--object-file-extension ".@OBJ_SUFFIX@" \
+		--pic-object-file-extension ".@EXT_FOR_PIC_OBJECTS@" \
+		--link-with-pic-object-file-extension ".@EXT_FOR_LINK_WITH_PIC_OBJECTS@" \
+		--executable-file-extension "@EXT_FOR_EXE@" \
+		--shared-library-extension ".@EXT_FOR_SHARED_LIB@" \
+		--library-extension ".@LIB_SUFFIX@" \
+		--create-archive-command "@AR@" \
+		--create-archive-command-output-flag "@AR_LIBFILE_OPT@" \
+		--create-archive-command-flags "@ARFLAGS@" \
+		--ranlib-command "@RANLIB@" \
+		--link-executable-command "@LINK_EXE@" \
+		--link-shared-lib-command "@LINK_SHARED_OBJ@" \
+		--trace-libs "@TRACE_LIBS_SYSTEM@" \
+		--thread-libs "@THREAD_LIBS@" \
+		--shared-libs "@SHARED_LIBS@" \
+		--math-lib "@MATH_LIB@" \
+		--readline-libs "@READLINE_LIBRARIES@" \
+		--linker-thread-flags "@LDFLAGS_FOR_THREADS@" \
+		--shlib-linker-thread-flags "@LD_LIBFLAGS_FOR_THREADS@" \
 		--linker-trace-flags "@LDFLAGS_FOR_TRACE@" \
 		--shlib-linker-trace-flags "@LD_LIBFLAGS_FOR_TRACE@" \
-		--linker-static-flags \"@LD_STATIC_FLAGS@\" \
-		--linker-strip-flag \"@LD_STRIP_FLAG@\" \
-		--linker-debug-flags \"@LDFLAGS_FOR_DEBUG@\" \
-		--shlib-linker-debug-flags \"@LD_LIBFLAGS_FOR_DEBUG@\" \
-		--linker-rpath-flag \"@EXE_RPATH_OPT@\" \
-		--linker-rpath-separator \"@EXE_RPATH_SEP@\" \
-		--shlib-linker-rpath-flag \"@SHLIB_RPATH_OPT@\" \
-		--shlib-linker-rpath-separator \"@SHLIB_RPATH_SEP@\" \
-		--linker-allow-undefined-flag \"@ALLOW_UNDEFINED@\" \
-		--linker-error-undefined-flag \"@ERROR_UNDEFINED@\" \
-		--fullarch \"@FULLARCH@\" \
-		--install-prefix \"@prefix@\" \
-		--num-real-r-regs \"@NUM_REAL_R_REGS@\" \
-		--num-real-r-temps \"@NUM_REAL_R_TEMPS@\" \
-		--conf-low-tag-bits \"@LOW_TAG_BITS@\" \
-		--bits-per-word \"@BITS_PER_WORD@\" \
-		--bytes-per-word \"@BYTES_PER_WORD@\" \
-		--dotnet-library-version \"@MS_DOTNET_LIBRARY_VERSION@\" \
+		--linker-static-flags "@LD_STATIC_FLAGS@" \
+		--linker-strip-flag "@LD_STRIP_FLAG@" \
+		--linker-debug-flags "@LDFLAGS_FOR_DEBUG@" \
+		--shlib-linker-debug-flags "@LD_LIBFLAGS_FOR_DEBUG@" \
+		--linker-rpath-flag "@EXE_RPATH_OPT@" \
+		--linker-rpath-separator "@EXE_RPATH_SEP@" \
+		--shlib-linker-rpath-flag "@SHLIB_RPATH_OPT@" \
+		--shlib-linker-rpath-separator "@SHLIB_RPATH_SEP@" \
+		--linker-allow-undefined-flag "@ALLOW_UNDEFINED@" \
+		--linker-error-undefined-flag "@ERROR_UNDEFINED@" \
+		--fullarch "@FULLARCH@" \
+		--install-prefix "@prefix@" \
+		--num-real-r-regs "@NUM_REAL_R_REGS@" \
+		--num-real-r-temps "@NUM_REAL_R_TEMPS@" \
+		--conf-low-tag-bits "@LOW_TAG_BITS@" \
+		--bits-per-word "@BITS_PER_WORD@" \
+		--bytes-per-word "@BYTES_PER_WORD@" \
+		--dotnet-library-version "@MS_DOTNET_LIBRARY_VERSION@" \
 		@HAVE_DELAY_SLOT@ \
 		@HAVE_BOXED_FLOATS@ \
 		@MCFLAGS_FOR_CC@ \
